# snapper

./: .clang-format  .clangd  .gitignore  README.org  ROADMAP.org  artifacts  cmake_args  compile_commands.json  goarc  used_apis
docs/: ROADMAP.org  ROADMAP.tex
docs/whitepaper/: snapper-v2.org
etc/: snapper-common.conf  snapper.conf  snapper.config  snappertests.conf
include/: crc32.h  snapper.h  utils.h  xxhash32.h
include/snapper_session/: README  client.h  connection.h  snapper_session.h
lib/mk/: snap.mk
pkg/snapper/: archives  runtime
pkg/snapperbench/: README.org  runtime
pkg/snappertests/: archives  runtime
recipes/api/snap/: content.mk  hash
recipes/src/snap/: content.mk  hash  used_apis
run/: snapper-common.inc  snapper.run  snappertests.run
src/: CMakeLists.txt  Makefile
src/bench/snapper/: main.cc  target.mk
src/include/: snapper.h  utils.h
src/lib/: archive.cc  backlink.cc  snapper.cc  utils.cc  xxhash32.cc
src/snapper/: main.cc  snapper.cc  target.mk  tests.cc
src/snapper/include/: snapper.h
src/test/snapper/: main.cc  target.mk
src/tests/: main.cc  snappertests.cc  target.mk
